Compose config now includes new module
Will be removed later once it finishes

--- a/deployment/crawler/Dockerfile
+++ b/deployment/crawler/Dockerfile
@@ -3,6 +3,7 @@ FROM maven:3.8.4-jdk-11-slim AS build
 COPY ./pom.xml /pom.xml
 COPY ./dl4se-crawler /dl4se-crawler
 COPY ./dl4se-model /dl4se-model
+COPY ./dl4se-patches /dl4se-patches
 COPY ./dl4se-server /dl4se-server
 COPY ./dl4se-src2abs /dl4se-src2abs
 
