--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -20,6 +20,18 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Install Included Libraries
-        run: mvn install:install-file -Dfile="./dl4se-src2abs/lib/javalexer.jar" -DgroupId="edu.wm.cs" -DartifactId="javalexer" -Dversion="1" -Dpackaging="jar"
+        run: >
+          mvn
+          install:install-file
+          -Dfile="./dl4se-src2abs/lib/javalexer.jar"
+          -DgroupId="edu.wm.cs"
+          -DartifactId="javalexer"
+          -Dversion="1"
+          -Dpackaging="jar"
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots --no-transfer-progress package
+        run: >
+          mvn
+          --batch-mode
+          --update-snapshots
+          --no-transfer-progress
+          package
