--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout main beanch
+      - name: Checkout main branch
         uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -22,6 +22,7 @@ jobs:
       - name: Install Included Libraries
         run: >
           mvn
+          --no-transfer-progress
           install:install-file
           -Dfile="./dl4se-src2abs/lib/javalexer.jar"
           -DgroupId="edu.wm.cs"
