--- a/dl4se-src2abs/pom.xml
+++ b/dl4se-src2abs/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <artifactId>dl4se</artifactId>
     <groupId>usi.si.seart</groupId>
-    <version>0.1-SNAPSHOT</version>
+    <version>${revision}</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>dl4se-src2abs</artifactId>
-  <version>0.1-SNAPSHOT</version>
 
   <name>dl4se-src2abs</name>
 
