--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
   <groupId>usi.si.seart</groupId>
   <artifactId>dl4se</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>${revision}</version>
   <packaging>pom</packaging>
     
   <name>DL4SE Dataset Hub</name>
@@ -32,6 +32,7 @@
   </modules>
 
   <properties>
+    <revision>1.0.0</revision>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.version>5.8.2</junit.version>
     <javaparser.version>3.24.4</javaparser.version>
