--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -12,6 +12,9 @@ management.endpoint.logfile.enabled=true
 management.endpoint.shutdown.enabled=true
 management.endpoint.restart.enabled=true
 management.endpoints.web.exposure.include=health,logfile,metrics,shutdown,restart
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-headers=*
+management.endpoints.web.cors.allowed-methods=OPTIONS,GET,POST
 management.endpoint.health.show-details=when_authorized
 management.endpoint.health.show-components=when_authorized
 
