Forgot to enable the metrics endpoint

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.banner.location=classpath:banner.txt
 management.endpoints.enabled-by-default=false
 management.endpoint.health.enabled=true
 management.endpoint.logfile.enabled=true
+management.endpoint.metrics.enabled=true
 management.endpoint.shutdown.enabled=true
 management.endpoint.restart.enabled=true
 management.endpoints.web.exposure.include=health,logfile,metrics,shutdown,restart
