Added missing validation starter to the server `pom.xml`

--- a/dl4se-server/pom.xml
+++ b/dl4se-server/pom.xml
@@ -109,6 +109,10 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-jooq</artifactId>
     </dependency>
     <dependency>
