--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -22,7 +22,7 @@
     "streamsaver": "^2.0.6",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
-    "vue-fragment": "^1.6.0",
+    "vue-frag": "^1.4.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3",
