Updated `package.json` with author information

--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -1,7 +1,13 @@
 {
   "name": "dl4se-website",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "author": {
+    "email": "Ozren Dabić",
+    "name": "dabico@usi.ch",
+    "url": "https://dabico.github.io/"
+  },
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
