--- a/.github/workflows/vue-build.yml
+++ b/.github/workflows/vue-build.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           node-version: '18.x'
           cache: 'npm'
+          cache-dependency-path: './dl4se-website/package-lock.json'
       - name: Node Clean Install
         run: npm clean-install
       - name: Vue Build
