Mail service is now conditionally enabled
I am tired of the constant email messages sent from the development
environment while working on stuff. Furthermore, since we use the same
mail account for production, we do not want messages sent during
development to be mixed up with those from production. Ergo, I have
created a new `EmailService` implementation that simply does not send
email messages: the `VoidEmailService`. To select whether we want to
use this implementation, or the actual existing one, I introduced a new
pseudo-mail property in `application.properties`. Although enabled by
default, the run configurations will have the option to override the
setting.

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -28,6 +28,7 @@ server.ssl.key-alias=dl4se
 server.ssl.key-password=${KEYSTORE_PASS}
 
 # Mail Configuration
+spring.mail.enabled=true
 spring.mail.test-connection=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
