--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "sass": "^1.53.0",
@@ -28,6 +29,7 @@
     "streamsaver": "^2.0.6",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
+    "vue-chartjs": "^4.1.2",
     "vue-frag": "^1.4.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
