--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -26,15 +26,13 @@
     "lodash": "^4.17.21",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
-    "streamsaver": "^2.0.6",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-chartjs": "^4.1.2",
     "vue-frag": "^1.4.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
-    "vuex-persist": "^3.1.3",
-    "web-streams-polyfill": "^3.2.1"
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
