--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -31,6 +31,7 @@
     "vue-chartjs": "^4.1.2",
     "vue-frag": "^1.4.1",
     "vue-router": "^3.5.1",
+    "vue-scrollto": "^2.20.0",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
   },
