--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -17,6 +17,7 @@
     "@vue/composition-api": "^1.7.0",
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.5",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.1",
