Fixing some stuff in the compose file

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -64,7 +64,9 @@ services:
     build:
       context: ../
       dockerfile: deployment/server/Dockerfile
-    networks: [ default, nginx-reverse-proxt-network ]
+    networks:
+      - default
+      - nginx-reverse-proxy-network
     environment:
       DATABASE_HOST: dl4se-db
       DATABASE_PORT: ${DATABASE_PORT}
@@ -110,7 +112,9 @@ services:
         WEBSITE_PORT: ${WEBSITE_PORT}
         SERVER_URL: https://seart-dl4se.si.usi.ch/api
 #        SERVER_URL: https://localhost:${SERVER_PORT}/api
-    networks: [ default, nginx-reverse-proxt-network ]
+    networks: 
+      - default
+      - nginx-reverse-proxy-network
     restart: always
     depends_on:
       dl4se-server:
@@ -131,6 +135,5 @@ volumes:
 networks:
   default:
     name: dl4se-network
-  nginx-reverse-proxt-network:
+  nginx-reverse-proxy-network:
     external: true
-
