--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -66,7 +66,6 @@ services:
       dockerfile: deployment/server/Dockerfile
     networks:
       - default
-      - nginx-reverse-proxy-network
     environment:
       DATABASE_HOST: dl4se-db
       DATABASE_PORT: ${DATABASE_PORT}
@@ -80,8 +79,7 @@ services:
       SERVER_SECURITY_PASS: ${SERVER_SECURITY_PASS}
       SERVER_JWT_SECRET: ${SERVER_JWT_SECRET}
       KEYSTORE_PASS: ${KEYSTORE_PASS}
-      WEBSITE_URL: https://seart-dl4se.si.usi.ch
-#      WEBSITE_URL: http://localhost:${WEBSITE_PORT}
+      WEBSITE_URL: http://localhost:${WEBSITE_PORT}
     volumes:
       - logs-server:/logs
       - tmp-server:/tmp
@@ -93,8 +91,7 @@ services:
         condition: on-failure
         max_attempts: 3
     healthcheck:
-      test: wget --spider --quiet --no-check-certificate https://gym.si.usi.ch:${SERVER_PORT}/api || exit 1
-#      test: wget --spider --quiet --no-check-certificate https://localhost:${SERVER_PORT}/api || exit 1
+      test: wget --spider --quiet --no-check-certificate https://localhost:${SERVER_PORT}/api || exit 1
       start_period: 15s
       interval: 30s
       timeout: 5s
@@ -110,11 +107,9 @@ services:
       dockerfile: deployment/website/Dockerfile
       args:
         WEBSITE_PORT: ${WEBSITE_PORT}
-        SERVER_URL: https://seart-dl4se.si.usi.ch/api
-#        SERVER_URL: https://localhost:${SERVER_PORT}/api
+        SERVER_URL: https://localhost:${SERVER_PORT}/api
     networks: 
       - default
-      - nginx-reverse-proxy-network
     restart: always
     depends_on:
       dl4se-server:
@@ -135,5 +130,3 @@ volumes:
 networks:
   default:
     name: dl4se-network
-  nginx-reverse-proxy-network:
-    external: true
