--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -24,6 +24,7 @@
     "bootstrap-vue": "^2.22.0",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "lodash": "^4.17.21",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
