--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
+    "identicon.js": "^2.3.3",
     "lodash": "^4.17.21",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
