Adding new project module

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <module>dl4se-model</module>
     <module>dl4se-server</module>
     <module>dl4se-src2abs</module>
+    <module>dl4se-tree-sitter</module>
   </modules>
 
   <properties>
