--- a/dl4se-tree-sitter/pom.xml
+++ b/dl4se-tree-sitter/pom.xml
@@ -15,4 +15,15 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <excludes>
+          <exclude>**/.gitkeep</exclude>
+        </excludes>
+      </resource>
+    </resources>
+  </build>
 </project>
