--- a/dl4se-tree-sitter/pom.xml
+++ b/dl4se-tree-sitter/pom.xml
@@ -25,5 +25,82 @@
         </excludes>
       </resource>
     </resources>
+    <plugins>
+      <plugin>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <executions>
+          <execution>
+            <id>clean-generated-files</id>
+            <phase>pre-clean</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>sh</executable>
+              <workingDirectory>${project.basedir}</workingDirectory>
+              <arguments>
+                <argument>-c</argument>
+                <argument>printf "Removed files:\n$(rm -vf src/main/resources/libjava-tree-sitter.*)\n"</argument>
+              </arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>generate-jni-headers</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>javah</executable>
+              <workingDirectory>${project.basedir}</workingDirectory>
+              <arguments>
+                <argument>-verbose</argument>
+                <argument>-jni</argument>
+                <argument>-classpath</argument>
+                <argument>${project.build.sourceDirectory}</argument>
+                <argument>-d</argument>
+                <argument>${project.basedir}/lib</argument>
+                <argument>usi.si.seart.treesitter.Languages</argument>
+                <argument>usi.si.seart.treesitter.TreeSitter</argument>
+              </arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>generate-dynamic-library</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>python</executable>
+              <workingDirectory>${project.basedir}</workingDirectory>
+              <arguments>
+                <argument>build.py</argument>
+                <argument>-o</argument>
+                <argument>src/main/resources/libjava-tree-sitter</argument>
+                <argument>tree-sitter-c</argument>
+                <argument>tree-sitter-cpp</argument>
+                <argument>tree-sitter-java</argument>
+                <argument>tree-sitter-javascript</argument>
+                <argument>tree-sitter-python</argument>
+              </arguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 </project>
