--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -48,7 +48,9 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-vue": "^8.0.3",
+    "prettier": "2.8.3",
     "vue-lorem-ipsum": "^0.0.1",
     "vue-template-compiler": "^2.6.14"
   }
