--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -11,7 +11,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint-vue": "vue-cli-service lint",
+    "lint-formatting": "npx prettier --check .",
+    "lint-eslint": "npx eslint .",
+    "lint": "npm run lint-vue && npm run lint-formatting && run lint-eslint"
   },
   "dependencies": {
     "@vue/composition-api": "^1.7.0",
