--- a/.github/workflows/vue-build.yml
+++ b/.github/workflows/vue-build.yml
@@ -17,13 +17,19 @@ jobs:
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v2
+
       - name: Set up Node.js 18.x
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
           cache: 'npm'
           cache-dependency-path: './dl4se-website/package-lock.json'
+
       - name: Node Clean Install
         run: npm clean-install
+
+      - name: Lint
+        run: npm run lint
+
       - name: Vue Build
         run: npm run build --if-present
