Name and email were swapped

--- a/dl4se-website/package.json
+++ b/dl4se-website/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "author": {
-    "email": "Ozren Dabić",
-    "name": "dabico@usi.ch",
+    "name": "Ozren Dabić",
+    "email": "dabico@usi.ch",
     "url": "https://dabico.github.io/"
   },
   "license": "MIT",
