--- a/dl4se-src2abs/pom.xml
+++ b/dl4se-src2abs/pom.xml
@@ -26,12 +26,12 @@
     <dependency>
       <groupId>com.github.javaparser</groupId>
       <artifactId>javaparser-core</artifactId>
-      <version>3.24.4</version>
+      <version>${javaparser.version}</version>
     </dependency>
     <dependency>
       <groupId>com.github.javaparser</groupId>
       <artifactId>javaparser-core-generators</artifactId>
-      <version>3.24.2</version>
+      <version>${javaparser.version}</version>
     </dependency>
     <dependency>
       <groupId>org.antlr</groupId>
