--- a/dl4se-crawler/pom.xml
+++ b/dl4se-crawler/pom.xml
@@ -31,12 +31,12 @@
     <dependency>
       <groupId>org.codehaus.janino</groupId>
       <artifactId>janino</artifactId>
-      <version>3.1.8</version>
+      <version>${janino.version}</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.janino</groupId>
       <artifactId>commons-compiler</artifactId>
-      <version>3.1.8</version>
+      <version>${janino.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.http-client</groupId>
