--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
     <postgresql.version>42.6.0</postgresql.version>
     <jjwt.version>0.11.5</jjwt.version>
     <jackson.version>2.15.2</jackson.version>
+    <springframework.version>2.7.13</springframework.version>
+    <springcloud.version>2021.0.3</springcloud.version>
   </properties>
 
   <dependencyManagement>
@@ -56,6 +58,20 @@
         <groupId>com.fasterxml.jackson</groupId>
         <artifactId>jackson-bom</artifactId>
         <version>${jackson.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${springframework.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${springcloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
