--- a/dl4se-crawler/pom.xml
+++ b/dl4se-crawler/pom.xml
@@ -24,6 +24,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>usi.si.seart</groupId>
+      <artifactId>dl4se-analyzer</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
