--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <junit.version>5.9.3</junit.version>
     <javaparser.version>3.25.3</javaparser.version>
     <lombok.version>1.18.26</lombok.version>
+    <guava.version>32.1.1-jre</guava.version>
     <janino.version>3.1.9</janino.version>
     <postgresql.version>42.6.0</postgresql.version>
     <jjwt.version>0.11.5</jjwt.version>
@@ -58,6 +59,13 @@
         <groupId>com.fasterxml.jackson</groupId>
         <artifactId>jackson-bom</artifactId>
         <version>${jackson.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava-bom</artifactId>
+        <version>${guava.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
