--- a/dl4se-crawler/pom.xml
+++ b/dl4se-crawler/pom.xml
@@ -41,6 +41,10 @@
       <artifactId>commons-compiler</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.http-client</groupId>
       <artifactId>google-http-client</artifactId>
       <version>1.42.2</version>
