--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -23,8 +23,13 @@ services:
 
   dl4se-liquibase:
     container_name: dl4se-liquibase
-    image: liquibase/liquibase:4.9
-    command: --username=${DATABASE_USER} --password=${DATABASE_PASS} --url=jdbc:postgresql://dl4se-db:${DATABASE_PORT}/${DATABASE_NAME} --changeLogFile=changelog.xml --hub-mode=off update
+    image: liquibase/liquibase:4.23-alpine
+    command:
+      --username=${DATABASE_USER}
+      --password=${DATABASE_PASS}
+      --url=jdbc:postgresql://dl4se-db:${DATABASE_PORT}/${DATABASE_NAME}
+      --changeLogFile=changelog.xml
+      update
     volumes:
       - ../liquibase/changelog.xml:/liquibase/changelog.xml
       - ../liquibase/scripts/:/liquibase/scripts/
