Updated logging configuration to enforce better naming

--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -14,10 +14,12 @@ spring.task.scheduling.pool.size=1
 # Logging Configuration
 logging.level.root=INFO
 logging.level.usi.si.seart.crawler=INFO
-logging.file.name=logs/crawler.log
+logging.file.path=logs
+logging.file.name=${logging.file.path}/crawler.log
 logging.logback.rollingpolicy.max-history=180
 logging.logback.rollingpolicy.max-file-size=100MB
 logging.logback.rollingpolicy.total-size-cap=5GB
+logging.logback.rollingpolicy.file-name-pattern=${logging.file.path}/crawler_%d{yyyy-MM-dd}_%i.log.gz
 
 # JPA Configuration
 spring.jpa.database=postgresql
