--- a/dl4se-analyzer/pom.xml
+++ b/dl4se-analyzer/pom.xml
@@ -27,5 +27,9 @@
       <artifactId>java-tree-sitter</artifactId>
       <version>1.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
   </dependencies>
 </project>
