--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -41,3 +41,4 @@ app.crawl-job.next-run-delay=PT6H
 app.crawl-job.url=${CRAWLER_URL:https://seart-ghs.si.usi.ch/api/r/search}
 app.crawl-job.start-date-time=2008-01-01T00:00:00
 app.crawl-job.type=${CRAWLER_JOB:CODE}
+app.crawl-job.ignore-pattern=
