The Google HTTP client is now a top-level dependency

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <javaparser.version>3.25.5</javaparser.version>
     <lombok.version>1.18.28</lombok.version>
     <guava.version>32.1.2-jre</guava.version>
+    <google.httpClient.version>1.43.3</google.httpClient.version>
     <janino.version>3.1.10</janino.version>
     <postgresql.version>42.6.0</postgresql.version>
     <jjwt.version>0.11.5</jjwt.version>
@@ -66,6 +67,13 @@
         <groupId>com.google.guava</groupId>
         <artifactId>guava-bom</artifactId>
         <version>${guava.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.http-client</groupId>
+        <artifactId>google-http-client-bom</artifactId>
+        <version>${google.httpClient.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
