--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <junit.version>5.10.0</junit.version>
     <javaparser.version>3.25.5</javaparser.version>
     <lombok.version>1.18.28</lombok.version>
-    <guava.version>32.1.2-jre</guava.version>
+    <google.guava.version>32.1.2-jre</google.guava.version>
     <google.httpClient.version>1.43.3</google.httpClient.version>
     <janino.version>3.1.10</janino.version>
     <postgresql.version>42.6.0</postgresql.version>
@@ -66,7 +66,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava-bom</artifactId>
-        <version>${guava.version}</version>
+        <version>${google.guava.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
