--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -52,6 +52,7 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.types.print.banner=false
 spring.jpa.properties.hibernate.jdbc.fetch_size=500
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 
 # JPA Debugging Configuration
 spring.jpa.properties.hibernate.format_sql=false
