Added new file filtering options
We now provide optional filtering parameters for files during crawling:
- `max-size`
- `max-lines`
- `max-parse-time`
- `glob-pattern`

The last option will eventually replace
`app.crawl-job.ignore.file-pattern`

--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -43,3 +43,7 @@ app.crawl-job.start-date-time=2008-01-01T00:00:00
 app.crawl-job.type=${CRAWLER_JOB:CODE}
 app.crawl-job.ignore.project-names=
 app.crawl-job.ignore.file-pattern=
+app.crawl-job.ignore.repository.file.max-size=5MB
+app.crawl-job.ignore.repository.file.max-lines=10000
+app.crawl-job.ignore.repository.file.max-parse-time=1000ms
+app.crawl-job.ignore.repository.file.glob-pattern=
