--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -41,8 +41,7 @@ app.crawl-job.next-run-delay=PT6H
 app.crawl-job.url=${CRAWLER_URL:https://seart-ghs.si.usi.ch/api/r/search}
 app.crawl-job.start-date-time=2008-01-01T00:00:00
 app.crawl-job.type=${CRAWLER_JOB:CODE}
-app.crawl-job.ignore.project-names=
-app.crawl-job.ignore.file-pattern=
+app.crawl-job.ignore.repository.names=
 app.crawl-job.ignore.repository.file.max-size=5MB
 app.crawl-job.ignore.repository.file.max-lines=10000
 app.crawl-job.ignore.repository.file.max-parse-time=1000ms
