Pagination configuration is now completely static

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -42,6 +42,13 @@ spring.security.user.name=${SERVER_SECURITY_USER}
 spring.security.user.password=${SERVER_SECURITY_PASS}
 spring.security.user.roles=admin
 
+# Pagination Configuration
+spring.data.web.pageable.size-parameter=size
+spring.data.web.pageable.page-parameter=page
+spring.data.web.pageable.default-page-size=20
+spring.data.web.pageable.max-page-size=100
+spring.data.web.pageable.one-indexed-parameters=true
+
 # Logging Configuration
 logging.level.usi.si.seart=INFO
 logging.level.org.jooq.Constants=WARN
