--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -84,3 +84,6 @@ jwt.secret=${SERVER_JWT_SECRET}
 scheduling.task.task-cleaner.cron=0 */15 * * * *
 scheduling.task.repo-maintainer.cron=0 0 0 * * SUN
 scheduling.task.view-maintainer.cron=0 0 0 * * *
+
+configuration.request_limit=3
+configuration.task_runner_count=2
