Fix minor sonarlint warning in website `Dockerfile`

--- a/deployment/website/Dockerfile
+++ b/deployment/website/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:18.7-alpine as install
+FROM node:18.7-alpine AS install
 ARG WEBSITE_PORT
 ARG SERVER_URL
 COPY ./dl4se-website/package*.json ./
 RUN npm install
 COPY ./dl4se-website .
 
-FROM install as build
+FROM install AS build
 ARG WEBSITE_PORT
 ARG SERVER_URL
 ARG NODE_ENV=production
@@ -13,7 +13,7 @@ RUN apk update && apk add gettext
 RUN envsubst < .env.template > .env
 RUN npm run build
 
-FROM nginx:1.23-alpine as production
+FROM nginx:1.23-alpine AS production
 COPY --from=build /dist /usr/share/nginx/html
 COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 CMD ["nginx", "-g", "daemon off;"]
