Completely removing `src2abs` from the dependency list

--- a/deployment/server/Dockerfile
+++ b/deployment/server/Dockerfile
@@ -1,10 +1,10 @@
 FROM maven:3.8.4-jdk-11-slim AS build
 
 COPY ./pom.xml /pom.xml
+COPY ./dl4se-analyzer /dl4se-analyzer
 COPY ./dl4se-crawler /dl4se-crawler
 COPY ./dl4se-model /dl4se-model
 COPY ./dl4se-server /dl4se-server
-COPY ./dl4se-src2abs /dl4se-src2abs
 
 RUN mvn -e --no-transfer-progress install:install-file \
     -Dfile="./dl4se-src2abs/lib/javalexer.jar" \
