Correcting `dl4se-server` containerization

--- a/deployment/server/Dockerfile
+++ b/deployment/server/Dockerfile
@@ -6,19 +6,21 @@ COPY ./dl4se-crawler /dl4se-crawler
 COPY ./dl4se-model /dl4se-model
 COPY ./dl4se-server /dl4se-server
 
-RUN mvn -e --no-transfer-progress install:install-file \
-    -Dfile="./dl4se-src2abs/lib/javalexer.jar" \
-    -DgroupId="edu.wm.cs" \
-    -DartifactId="javalexer" \
-    -Dversion="1" \
-    -Dpackaging="jar"
-
-RUN mvn -e --no-transfer-progress clean package -pl dl4se-server -am -DskipTests
+RUN mvn -e \
+        --no-transfer-progress \
+        clean \
+        package \
+        -pl dl4se-server \
+        -am -DskipTests
 
 FROM adoptopenjdk/openjdk11:jre-11.0.11_9-alpine
 
 COPY --from=build /dl4se-server/target/dl4se-server-*.jar /server.jar
 
-RUN apk update && apk add git
+RUN apk update --quiet && \
+    apk add --no-cache \
+            --quiet \
+            git \
+            libstdc++
 
 ENTRYPOINT java -jar server.jar
