--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -80,6 +80,7 @@ website.url=${WEBSITE_URL:http://${website.host}:${website.port}}
 
 # JWT Configuration
 jwt.secret=${SERVER_JWT_SECRET}
+jwt.token.valid-for=7d
 
 scheduling.task.task-cleaner.cron=0 */15 * * * *
 scheduling.task.repo-maintainer.cron=0 0 0 * * SUN
