Server logging config now similar to crawler

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -52,6 +52,12 @@ spring.data.web.pageable.one-indexed-parameters=true
 # Logging Configuration
 logging.level.root=INFO
 logging.level.ch.usi.si.seart.server=INFO
+logging.file.path=logs
+logging.file.name=${logging.file.path}/server.log
+logging.logback.rollingpolicy.max-history=180
+logging.logback.rollingpolicy.max-file-size=100MB
+logging.logback.rollingpolicy.total-size-cap=5GB
+logging.logback.rollingpolicy.file-name-pattern=${logging.file.path}/server_%d{yyyy-MM-dd}_%i.log.gz
 
 # JPA Configuration
 spring.jpa.database=postgresql
@@ -64,10 +70,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 # JPA Debugging Configuration
 spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.hibernate.SQL=OFF
-logging.file.name=logs/platform.log
-logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}_%d{yyyy-MM-dd}_%i.log.gz
-logging.logback.rollingpolicy.max-file-size=100MB
-logging.logback.rollingpolicy.max-history=180
 
 # Spring Datasource Configuration
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
