--- a/dl4se-crawler/pom.xml
+++ b/dl4se-crawler/pom.xml
@@ -10,7 +10,7 @@
 
   <artifactId>dl4se-crawler</artifactId>
 
-  <name>dl4se-crawler</name>
+  <name>${project.groupId}:${project.artifactId}</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
