--- a/deployment/crawler/Dockerfile
+++ b/deployment/crawler/Dockerfile
@@ -4,13 +4,11 @@ COPY ./pom.xml /pom.xml
 COPY ./dl4se-analyzer /dl4se-analyzer
 COPY ./dl4se-crawler /dl4se-crawler
 COPY ./dl4se-model /dl4se-model
-COPY ./dl4se-server /dl4se-server
 
 RUN mvn -e \
         --no-transfer-progress \
-        clean \
         package \
-        -pl dl4se-crawler \
+        -Pcrawler \
         -am -DskipTests
 
 FROM eclipse-temurin:11.0.20_8-jre-alpine
