--- a/dl4se-model/pom.xml
+++ b/dl4se-model/pom.xml
@@ -18,6 +18,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>ch.usi.si.seart</groupId>
+      <artifactId>jakarta-validation-utils-legacy</artifactId>
+      <version>0.1.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
