--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
       <modules>
         <module>dl4se-model</module>
         <module>dl4se-server</module>
+        <module>dl4se-transformer</module>
       </modules>
     </profile>
     <profile>
@@ -49,6 +50,7 @@
         <module>dl4se-analyzer</module>
         <module>dl4se-crawler</module>
         <module>dl4se-server</module>
+        <module>dl4se-transformer</module>
       </modules>
     </profile>
   </profiles>
