Added `dl4se-transformer` dependency to server

--- a/dl4se-server/pom.xml
+++ b/dl4se-server/pom.xml
@@ -24,6 +24,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>ch.usi.si.seart</groupId>
+      <artifactId>dl4se-transformer</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt-api</artifactId>
       <version>${jjwt.version}</version>
