--- a/dl4se-crawler/pom.xml
+++ b/dl4se-crawler/pom.xml
@@ -14,7 +14,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.module.mainClass>ch.usi.si.seart.crawler.Application</project.module.mainClass>
   </properties>
 
   <dependencies>
@@ -26,6 +25,11 @@
     <dependency>
       <groupId>ch.usi.si.seart</groupId>
       <artifactId>dl4se-analyzer</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.usi.si.seart</groupId>
+      <artifactId>dl4se-spring</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
