Added new module to the `Dockerfile` of both `crawler` and `server`

--- a/deployment/server/Dockerfile
+++ b/deployment/server/Dockerfile
@@ -3,6 +3,7 @@ FROM maven:3.9.3-eclipse-temurin-11-alpine AS build
 COPY ./pom.xml /pom.xml
 COPY ./dl4se-model /dl4se-model
 COPY ./dl4se-server /dl4se-server
+COPY ./dl4se-spring /dl4se-spring
 
 RUN mvn -e \
         --no-transfer-progress \
