--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -36,13 +36,13 @@ spring.datasource.password=${DATABASE_PASS:Lugano2022}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Application Configuration
-app.general.tmp-dir-prefix=crawler-
+app.crawl-job.tmp-dir-prefix=crawler-
 app.crawl-job.next-run-delay=PT6H
-app.crawl-job.url=${CRAWLER_URL:https://seart-ghs.si.usi.ch/api/r/search}
+app.crawl-job.base-url=https://seart-ghs.si.usi.ch/api/r/search
 app.crawl-job.start-date-time=2008-01-01T00:00:00
 app.crawl-job.type=${CRAWLER_JOB:CODE}
+app.crawl-job.analyzer.max-parse-time=1000ms
 app.crawl-job.ignore.repository.names=
 app.crawl-job.ignore.repository.file.max-size=5MB
 app.crawl-job.ignore.repository.file.max-lines=10000
-app.crawl-job.ignore.repository.file.max-parse-time=1000ms
 app.crawl-job.ignore.repository.file.glob-pattern=
