--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -35,13 +35,13 @@ spring.datasource.username=${DATABASE_USER:dl4se_admin}
 spring.datasource.password=${DATABASE_PASS:Lugano2022}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Application Configuration
-app.crawl-job.tmp-dir-prefix=crawler-
-app.crawl-job.next-run-delay=PT6H
-app.crawl-job.base-url=https://seart-ghs.si.usi.ch/api/r/search
-app.crawl-job.start-date-time=2008-01-01T00:00:00
-app.crawl-job.analyzer.max-parse-time=1000ms
-app.crawl-job.ignore.repository.names=
-app.crawl-job.ignore.repository.file.max-size=5MB
-app.crawl-job.ignore.repository.file.max-lines=10000
-app.crawl-job.ignore.repository.file.glob-pattern=
+# Crawler Configuration
+crawler.base-url=https://seart-ghs.si.usi.ch/api/r/search
+crawler.start-date-time=2008-01-01T00:00:00
+crawler.tmp-dir-prefix=crawler-
+crawler.next-run-delay=PT6H
+crawler.analyzer.max-parse-time=1000ms
+crawler.ignore.repository.names=
+crawler.ignore.repository.file.max-size=5MB
+crawler.ignore.repository.file.max-lines=10000
+crawler.ignore.repository.file.glob-pattern=
