Truncating `crawler.start-date-time` to just the `date` portion

--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Crawler Configuration
 crawler.base-url=https://seart-ghs.si.usi.ch/api/r/search
-crawler.start-date-time=2008-01-01T00:00:00
+crawler.start-date=2008-01-01
 crawler.tmp-dir-prefix=crawler-
 crawler.next-run-delay=PT6H
 crawler.analyzer.max-parse-time=1000ms
