Pluralizing configuration segment `file` -> `files`

--- a/dl4se-crawler/src/main/resources/application.properties
+++ b/dl4se-crawler/src/main/resources/application.properties
@@ -42,6 +42,6 @@ crawler.tmp-dir-prefix=crawler-
 crawler.next-run-delay=PT6H
 crawler.analyzer.max-parse-time=1000ms
 crawler.ignore.repository.names=
-crawler.ignore.repository.file.max-size=5MB
-crawler.ignore.repository.file.max-lines=10000
-crawler.ignore.repository.file.glob-pattern=
+crawler.ignore.repository.files.max-size=5MB
+crawler.ignore.repository.files.max-lines=10000
+crawler.ignore.repository.files.glob-pattern=
