Nesting configuration property related to scheduling

--- a/dl4se-crawler/src/main/resources/crawler.properties
+++ b/dl4se-crawler/src/main/resources/crawler.properties
@@ -1,7 +1,7 @@
 crawler.base-url=https://seart-ghs.si.usi.ch/api/r/search
 crawler.start-date=2008-01-01
 crawler.tmp-dir-prefix=crawler-
-crawler.next-run-delay=PT6H
+crawler.scheduling.next-run-delay=PT6H
 crawler.analyzer.max-parse-time=1000ms
 crawler.ignore.repository.names=
 crawler.ignore.repository.files.max-size=5MB
