Relegating `Language` specification to `crawler.properties`
Each `Language` is now specified with the `crawler.language` prefix.
The subsequent path segment is used as the language name, while the
values of the configuration itself constitute the extension. The file
already contains a commented-out block providing examples. The
`LanguageInitializingBean` has also been modified to accommodate these
changes, while also being manually created based on the `CrawlerConfig`.
The `languages.yaml` file has been completely removed.

--- a/dl4se-crawler/src/main/resources/crawler.properties
+++ b/dl4se-crawler/src/main/resources/crawler.properties
@@ -7,3 +7,7 @@ crawler.ignore.repository.names=
 crawler.ignore.repository.files.max-size=5MB
 crawler.ignore.repository.files.max-lines=10000
 crawler.ignore.repository.files.glob-pattern=
+#crawler.languages.Java=java
+#crawler.languages.Python=py
+#crawler.languages.C=c,h
+#crawler.languages.[C++]=cc,cpp
