--- a/pom.xml
+++ b/pom.xml
@@ -66,13 +66,13 @@
     <treesitter.version>1.7.0</treesitter.version>
     <lombok.version>1.18.30</lombok.version>
     <google.guava.version>32.1.3-jre</google.guava.version>
-    <google.httpClient.version>1.43.3</google.httpClient.version>
+    <google.http-client.version>1.43.3</google.http-client.version>
     <janino.version>3.1.10</janino.version>
     <postgresql.version>42.6.0</postgresql.version>
     <jjwt.version>0.12.3</jjwt.version>
     <jackson.version>2.15.3</jackson.version>
-    <springframework.version>2.7.17</springframework.version>
-    <springcloud.version>2021.0.8</springcloud.version>
+    <spring-boot.version>2.7.17</spring-boot.version>
+    <spring-cloud.version>2021.0.8</spring-cloud.version>
   </properties>
 
   <dependencyManagement>
@@ -101,21 +101,21 @@
       <dependency>
         <groupId>com.google.http-client</groupId>
         <artifactId>google-http-client-bom</artifactId>
-        <version>${google.httpClient.version}</version>
+        <version>${google.http-client.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>${springframework.version}</version>
+        <version>${spring-boot.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${springcloud.version}</version>
+        <version>${spring-cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
