Added `JAVA_OPTS` to dl4se-server image

--- a/deployment/server/Dockerfile
+++ b/deployment/server/Dockerfile
@@ -22,4 +22,4 @@ RUN apk update --quiet && \
             git \
             libstdc++
 
-ENTRYPOINT java -jar server.jar
+ENTRYPOINT java $JAVA_OPTS -jar server.jar
