--- a/dl4se-model/src/main/resources/ValidationMessages.properties
+++ b/dl4se-model/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
 ch.usi.si.seart.validation.constraints.FileExtension.message=invalid file extension
+ch.usi.si.seart.validation.constraints.LanguageName.message=invalid programming language name
