Extracting scheduled job configurations to `SchedulingProperties` class

--- a/dl4se-server/src/main/resources/application.properties
+++ b/dl4se-server/src/main/resources/application.properties
@@ -85,9 +85,10 @@ website.url=${WEBSITE_URL:http://${website.host}:${website.port}}
 jwt.secret=${SERVER_JWT_SECRET}
 jwt.tokens.valid-for=7d
 
-scheduling.task.task-cleaner.cron=0 */15 * * * *
-scheduling.task.repo-maintainer.cron=0 0 0 * * SUN
-scheduling.task.view-maintainer.cron=0 0 0 * * *
+# Scheduled Job Configuration
+scheduling.task-cleaner-cron=0 */15 * * * *
+scheduling.repo-maintainer-cron=0 0 0 * * SUN
+scheduling.view-maintainer-cron=0 0 0 * * *
 
 configuration.request_limit=3
 configuration.task_runner_count=2
